# Neurohack105_week1project

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_setup_check.ipynb  02_pfactor_model.ipynb
scripts/: get_data.py
